# shobee

./: Cargo.toml  LICENSE  README.org
migrations/: 20220825233952_item.sql  20220826220840_rating.sql  20220827012452_image.sql  20220827022128_voucher.sql
src/: main.rs  models.rs  routines.rs
