[package]
name = "shobee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.2"
reqwest = {version="0.11.11",features = ["json","gzip","brotli","deflate"]}
serde = {version="1.0.144",features = ["derive"]}
serde_json = "1.0.83"
sqlx = {version="0.6.1",features=["runtime-tokio-native-tls","json","mysql","migrate"]}
tokio = {version="1.20.1",features=["rt-multi-thread","macros"]}
